--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./style.css">
+    <!-- Import the list generation and item deletion logic: -->
     <script src="./script.js"></script>
+    <!-- Import the CSS theme control logic: -->
+    <script src="./themeControl.js"></script>
 </head>
 <body>
 
@@ -16,13 +19,26 @@
     <br />
 
     <h2>Favourite Media</h2>
-    <ul id="mediaList">
+    <ul id="mediaList" class="bananas">
 
     </ul>
+
+    <button onclick="changeCSSTheme('dark')">
+		Change theme to dark
+	</button>
+
+    <button onclick="changeCSSTheme('light')">
+		Change theme to light
+	</button>
+
+    <button onclick="toggleLightDark()">
+        Toggle Light/Dark
+    </button>
 
     <script>
         exampleHello();
         createListOfMedia();
+        changeCSSTheme("dark");
     </script>
     
 </body>
